--- a/profile/index.html
+++ b/profile/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>AK's Profile</title>
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
     </header>
     <section class="banner" id="banner">
         <div class="content">
-            <h2>H<span class="i">i</span> Folks </h2>
+            <h2>Hi Folks </h2>
             <p>I am Arun Kumar and this is my site to reveal my profile and skillset to you, scroll further for more details <i class="fas fa-angle-double-down"></i></p>
         </div>
     </section>
@@ -135,21 +135,24 @@
     <div class="title white">
         <h2 class="titletext"><span>C</span>ontact me</h2>
     </div>
+    <form action="https://formspree.io/f/xvodaogw" method="POST">
+        
     <div class="contactform">
         <h3>Send Message</h3>
         <div class="inputbox">
-            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Name" name="Name">
         </div>
         <div class="inputbox">
-            <input type="email" placeholder="Email">
+            <input type="email" placeholder="Email" name="_replyto">
         </div>
         <div class="inputbox">
-            <textarea placeholder="Message"></textarea>
+            <textarea placeholder="Message" name="message"></textarea>
         </div>
         <div class="inputbox">
             <input type="submit" value="Send">
         </div>
     </div>
+    </form>
 </section>
 <div class="copyrighttext">
     <p>Copyright &copy; 2021 Arunkumar</p>
