--- a/profile/index.html
+++ b/profile/index.html
@@ -151,6 +151,7 @@
         <div class="inputbox">
             <input type="submit" value="Send">
         </div>
+        <h3>Follow me on &nbsp; <label for="" class="insta"><a href="https://www.instagram.com/_nite_fury_/" target="_blank"><i  class="fab fa-instagram"></i></a></label></h3>
     </div>
     </form>
 </section>
