--- a/profile/index.html
+++ b/profile/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <title>AK's Profile</title>
+    <title> ArunKumar-Profile &#128540;</title>
 </head>
+
 <body>
     <header>
         <a href="#" class="logo">AK</a>
@@ -140,18 +141,18 @@
     <div class="contactform">
         <h3>Send Message</h3>
         <div class="inputbox">
-            <input type="text" placeholder="Name" name="Name">
+            <input type="text" autocomplete="off" placeholder="Name" name="Name">
         </div>
         <div class="inputbox">
-            <input type="email" placeholder="Email" name="_replyto">
+            <input type="email" autocomplete="off" placeholder="Email" name="_replyto">
         </div>
         <div class="inputbox">
-            <textarea placeholder="Message" name="message"></textarea>
+            <textarea placeholder="Message" autocomplete="off"  name="message"></textarea>
         </div>
         <div class="inputbox">
             <input type="submit" value="Send">
         </div>
-        <h3>Follow me on &nbsp; <label for="" class="insta"><a href="https://www.instagram.com/_nite_fury_/" target="_blank"><i  class="fab fa-instagram"></i></a></label></h3>
+        <h3>Follow me on &nbsp;<label for="" class="insta"><a href="https://www.instagram.com/_nite_fury_/" target="_blank"><i  class="fab fa-instagram"></i></a></label>&nbsp;<label for="" class="link"><a href="https://www.linkedin.com/in/ArunKumar-S-2910/" target="_blank"><i  class="fab fa-linkedin"></i></a></label></h3>
     </div>
     </form>
 </section>
