--- a/profile/index.html
+++ b/profile/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="text">
                 <h2 class="h3">Iam a Pursuing Web Developer</h2>
-                <p>HTML5 <br>CSS3<br>JavaScript<br>React JS<br>Python & <br>MySQl </p>
+                <p>HTML5 <br>CSS3<br>JavaScript<br>React JS & Angular JS & ReactNative<br>Java & Node JS <br>MySQl & Mongo </p>
             </div>
         </div>
     </div>
