--- a/profile/index.html
+++ b/profile/index.html
@@ -57,14 +57,14 @@
             <div class="box">
                 <div class="imgbx">
                     <div class="img">
-                        <h2 class="titletext">College <i class="fas fa-graduation-cap"></i></h2><p>Jerusalem Collegeof Engineering <br>B.E-Biomedical(Pursuing) <br>CGPA-7.6/10</p>
+                        <h2 class="titletext">College <i class="fas fa-graduation-cap"></i></h2><p>Jerusalem Collegeof Engineering <br>B.E-Biomedical<br>CGPA-7.9/10</p>
                     </div>
                 </div>
             </div>
             <div class="box">
                 <div class="imgbx">
                     <div class="img">
-                        <h2 class="titletext">Course <i class="fas fa-laptop-code"></i></h2><p>BesantTechnologies <br>Full Stack Development <Br>Pursuing<Br></p>
+                        <h2 class="titletext">Course <i class="fas fa-laptop-code"></i></h2><p>BesantTechnologies <br>Full Stack Development</p>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="text">
                 <h2 class="h3">Iam a Free-time Editor</h2>
-                <p>Photo-Manipulation <br>Basic 2D-Animation<br>Basic 3D-Model <br>Plays with Light &<br>Shadows</p>
+                <p>Photo-Manipulation <br>Basic 2D-Animation<br>Basic 3D-Model <br>Loves to play with Light &<br>Shadows</p>
             </div>
         </div>
         <div class="box">
@@ -126,8 +126,8 @@
                 <img src="img/web-design.png" alt="">
             </div>
             <div class="text">
-                <h2 class="h3">Iam a Pursuing Web Developer</h2>
-                <p>HTML5 <br>CSS3<br>JavaScript<br>React JS & Angular JS & ReactNative<br>Java & Node JS <br>MySQl & Mongo </p>
+                <h2 class="h3">Iam a Developer</h2>
+                <p>HTML5 <br>CSS3<br>JavaScript<br>React JS & Angular JS & ReactNative<br>Java & Node JS <br>Oracle SQl & Mongo </p>
             </div>
         </div>
     </div>
